--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "bcryptjs": "^2.4.3", 
+    "qrcode": "^1.5.3",
+    "js-cookie": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -83,6 +86,10 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/qrcode": "^1.5.5", 
+    "@types/js-cookie": "^3.0.6",
+    "eslint-plugin-security": "^1.7.1"
   }
 }
